hacky mobile header

--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -8,7 +8,7 @@
 
     <nav class="right">
     <% if (authenticated && user) { %>
-      <img id="user-data" data-id="<%= user.id %>" src="<%= user.photos[0].value %>" alt="<%= user.username %>" width="42">
+      <img id="user-data" data-id="<%= user.id %>" src="<%= user.photos[0].value %>" alt="<%= user.username %>">
       <a href="/logout" class="btn red">logout</a>
     <% } else { %>
       <a href="/auth/twitter" class="btn blue">Log In</a>
