--- a/app/scss/base/_layout.scss
+++ b/app/scss/base/_layout.scss
@@ -1,6 +1,9 @@
 .nav-wrap {
   background-color: $white;
   padding-top: 72px;
+  @media (max-width: 460px) {
+    padding-top: 57px;
+  }
   width: 100%;
   &.transparent {
     background-color: transparent;
@@ -24,6 +27,9 @@
     color: $body-color;
     display: inline-block;
     font-size: 1.5em;
+    @media (max-width: 460px) {
+      font-size: 1em;
+    }
     line-height: 2em;
     float: left;
     margin-right: 2.5em;
@@ -39,6 +45,12 @@
       background-size: contain;
       vertical-align: -11px;
       margin-right:8px;
+      @media (max-width: 460px) {
+        height: 20px;
+        width: 20px;
+        vertical-align: -5px;
+        margin-right: 4px;
+      }
     }
   }
   nav {
@@ -46,11 +58,24 @@
     float:right;
     width: auto;
     img {
+      height: 42px;
+      width: 42px;
       @include border-radius(26px, 26px);
       border: 4px solid $blue;
       display: inline;
       float: left;
       margin-top: -4px;
+      @media (max-width: 460px) {
+        height: 30px;
+        width: 30px;
+        border-width: 3px;
+      }
+    }
+    @media (max-width: 460px) {
+      .btn {
+        padding: .5em;
+        margin-left: 10px;
+      }
     }
     a {
       margin-left: 18px;
