--- a/views/partials/_transparent_nav.ejs
+++ b/views/partials/_transparent_nav.ejs
@@ -7,7 +7,7 @@
     <% } %>
     <nav>
     <% if (authenticated && user) { %>
-      <img id="user-data" data-id="<%= user.id %>" src="<%= user.photos[0].value %>" alt="<%= user.username %>" width="42">
+      <img id="user-data" data-id="<%= user.id %>" src="<%= user.photos[0].value %>" alt="<%= user.username %>">
       <a href="/logout" class="white-link">logout</a>
     <% } else { %>
       <a href="/auth/twitter" class="white-link">Log In</a>
