--- a/app/scss/_editor.scss
+++ b/app/scss/_editor.scss
@@ -42,6 +42,17 @@
   border: 2px solid #5498e8;
   border-top: 12px solid #5498e8;
 
+  p {
+    color: #5498e8;
+    font-size: 1.25em;
+    line-height: 1.75em;
+    margin: 0;
+    &.secondary {
+      font-size: 1em;
+      margin-bottom: .5em;
+    }
+  }
+
   input[type='text']{
     width: 100%;
     font-size: 1.25em;
