--- a/views/partials/_fake_ui.ejs
+++ b/views/partials/_fake_ui.ejs
@@ -1,7 +1,7 @@
 <div class="edit-tools">
   <% if (locals.board) { %>
-    <p>Board Title: <%= board.properties.title %></p>
-    <p>Board Location: <%= board.properties.city %></p>
+    <p><%= board.properties.title %></p>
+    <p class="secondary"><%= board.properties.city %></p>
     <button class="btn register-device">Register Device</button>
     <button class="btn join-game" disabled>Join Game</button>
     <button class="btn tool line" disabled>Fake Movement</button>
