--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
   <section>
     <header>
       <h2>1. Make a Board</h2>
-      <a class="btn cream">Go Build One</a>
+      <a href="/boards/new" class="btn cream">Go Build One</a>
     </header>
     <div class="board-gallery col-group">
       <div class="col col1of3">
