--- a/views/board.ejs
+++ b/views/board.ejs
@@ -26,8 +26,8 @@
     <div id="editor"<% if (locals.board || locals.boardId) { %> data-board-id="<%- locals.boardId || findIdInTags(board.tags, 'board') %>"<% } %>></div>
     <div class="edit-tools">
       <% if (locals.board) { %>
-        <p><%= board.properties.title %></p>
-        <p class="secondary"><%= board.properties.city %></p>
+        <p><%= board.properties.title ? board.properties.title : '' %></p>
+        <p class="secondary"><%= board.properties.city ? board.properties.city : '' %></p>
       <% } else { %>
         <p>Can't Find Board</p>
       <% } %>
