--- a/app/scss/_boards.scss
+++ b/app/scss/_boards.scss
@@ -52,6 +52,14 @@
       }
     }
   }
+  &.filtering {
+    li {
+      display: none;
+      &.visible {
+        display: block;
+      }
+    }
+  }
 }
 
 .games-link {
@@ -92,7 +100,7 @@
     padding: 3px 6px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
-    border-radius: 4px;  
+    border-radius: 4px;
   }
   .blue_num {
     background-color: $blue;
@@ -100,7 +108,7 @@
     padding: 3px 6px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
-    border-radius: 4px;  
+    border-radius: 4px;
   }
   &.label {
     .plain {
