acceptable levels achieved

--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -14,6 +14,7 @@ $blue:           #5498E8 !default;
 $dark-blue:      #1E6ACA !default;
 
 $body-blue:      darken($blue, 6%);
+$light-blue:     lighten($blue, 10%);
 
 
 
