--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
         </div>
         <div class="copy">
           <h3>Map Attack in a Nutshell</h3>
-          <p>Two teams compete to capture the most points on the gameboard. The gameboard, in this case, is the city streets of the neighborhood the players are in. To play, all you need is a phone (Android running 2.2 or later and iPhone 3GS or later) a city street, park or college campus, and some friends.</p>
+          <p>Two teams compete to capture the most points on the gameboard. The gameboard, in this case, is the city streets of the neighborhood the players are in. To play, all you need is a phone (Android running 2.2 or later and iPhone 3GS or later), a city street, park or college campus, and some friends.</p>
         </div>
       </div>
     <section>
@@ -46,10 +46,10 @@
       </header>
 
       <p>MapAttack is a game of territory capture for groups up to 20 people!</p>
-      <p>You can play MapAttack if there is a gameboard in your area, or you can make your own from the web at http://mapattack.org!</p>
+      <p>You can play MapAttack if there is a gameboard in your area, or you can make your own from the web at <a href="http://mapattack.org">mapattack.org</a>!</p>
       <p>To join the game from your phone, tap on Nearby Games to see if there is a game near you. Once you see a nearby game, click on the game to join it, and you'll be assigned a team. Group up with your team and wait until all players have connected to start the game.</p>
       <p>Once all players have been assigned a team, try to pick up as many points on the map as you can. You'll be able to see the other players on the other team by their icons on the map, and you'll be able to see both team's scores update in real time.</p>
-      <p>When all the points on the map are gone, you'll get a message that the game is over your score!</p>
+      <p>When all the points on the map are gone, you'll get a message with your score!</p>
     </section>
   </div>
 
@@ -130,11 +130,11 @@
       <h2>Technology</h2>
       <p>MapAttack is a real-time location-based geofencing game built on Esri technology.</p>
 
-      <p>For more information about Esri technology for developers, see <a href="http://developers.esri.com">http://developers.esri.com</a>.</p>
+      <p>For more information about Esri technology for developers, see <a href="http://developers.esri.com">developers.arcgis.com</a>.</p>
 
       <h2>History</h2>
 
-      <p>MapAttack is a homage to the 2004 location-based mapping game <a href="http://www.pacmanhattan.com/">PacManhattan</a>, and is a remake of the original <a href="https://geoloqi.com/blog/2011/04/geoloqi-launches-mapattack-a-real-time-location-based-mobile-gaming-platform-of-awesomeness/">MapAttack 2011</a> built on Geoloqi software.</p>
+      <p>MapAttack is a tribute to the 2004 location-based mapping game <a href="http://www.pacmanhattan.com/">PacManhattan</a>, and is a remake of the original <a href="https://geoloqi.com/blog/2011/04/geoloqi-launches-mapattack-a-real-time-location-based-mobile-gaming-platform-of-awesomeness/">MapAttack 2011</a> built on Geoloqi software.</p>
     </section>
   </div>
 
