--- a/views/board.ejs
+++ b/views/board.ejs
@@ -23,7 +23,7 @@
   <%- partial('partials/_transparent_nav') %>
 
   <div class="wrapper transparent">
-    <div id="map"<% if (locals.board || locals.boardId) { %> data-board-id="<%- locals.boardId || findIdInTags(board.tags, 'board') %>"<% } %>></div>
+    <div id="editor"<% if (locals.board || locals.boardId) { %> data-board-id="<%- locals.boardId || findIdInTags(board.tags, 'board') %>"<% } %>></div>
     <div class="edit-tools">
       <% if (locals.board) { %>
         <p><%= board.properties.title ? board.properties.title : '' %></p>
