add patrick too!

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -123,6 +123,7 @@
         <li><a href="http://twitter.com/NikolasWise">Nik Wise</a></li>
         <li><a href="http://twitter.com/paulcpederson">Paul Pederson</a></li>
         <li><a href="http://twitter.com/n8ji">Nate Goldman</a></li>
+        <li><a href="http://twitter.com/patrickarlt">Patrick Arlt</a></li>
         <li><a href="http://twitter.com/hsoj">Josh Yaganeh</a></li>
         <li><a href="http://twitter.com/FowlerCourt">Court Fowler</a></li>
         <li><a href="http://twitter.com/thatryana">Ryan Arana</a></li>
