--- a/app/scss/_viewer.scss
+++ b/app/scss/_viewer.scss
@@ -16,7 +16,7 @@
     color: $dark-gray;
     font-family: $body-font;
     font-size:1em;
-    border: 2px solid $white;
+    border: 3px solid $white;
     padding: 1em;
     @include box-sizing(border-box);
     .total-players {
@@ -27,10 +27,10 @@
   .score {
     padding: 1em 15px;
     color: white;
-    border: 2px solid white;
+    border: 3px solid white;
     display: inline-block;
     &.blue {
-      border-right: 1px solid $cream;
+      border-right: none;
       .number {
         float:right;
         font-size: 2em;
@@ -41,7 +41,7 @@
       }
     }
     &.red {
-      border-left: 1px solid $cream;
+      border-left: 3px solid $cream;
       .color {
         float:right;
         font-size: 1em;
@@ -63,13 +63,13 @@
   &.blue {
     left:24px;
     color: $blue;
-    border: 2px solid $blue;
+    border: 3px solid $blue;
     border-top: 12px solid $blue;
   }
   &.red {
     right:24px;
     color: $red;
-    border: 2px solid $red;
+    border: 3px solid $red;
     border-top: 12px solid $red;
   }
   .players {
