homepage responsize, layout tweaks, spell out nikolas' name.

--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -17,9 +17,6 @@ $dark-blue:      #1E6ACA !default;
 $body-blue:      darken($blue, 6%);
 $light-blue:     lighten($blue, 10%);
 
-
-
-
 // Font Families
 $body-font:      "Karla", Arial, Helvetica, sans !default;
 $header-font:    "Mensch", Arial, Helvetica, sans !default;
@@ -36,3 +33,12 @@ $header-color:   $dark-gray;
 // Font Sizes
 $body-size:      1em;
 $header-size:    3em;
+
+
+// Breakpoints
+$phone:        300px  !default;
+$phone-wide:   480px  !default;
+$tablet:       720px  !default;
+$tablet-wide:  1080px !default;
+$desktop:      1280px !default;
+$desktop-wide: 1920px !default;
