--- a/app/scss/_editor.scss
+++ b/app/scss/_editor.scss
@@ -156,6 +156,9 @@
   vertical-align: center;
   background-color: $light-gray;
   @include border-radius(10px);
+  &:focus {
+    outline: 0;
+  }
   &.p10:after {
     content: '10';
   }
