--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -6,6 +6,21 @@
   background-size: cover;
 }
 
+.video-wrap {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+  iframe, object, embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .board-gallery {
   figure {
     padding: 1em;
