--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,9 @@
       <blockquote class="blue">An urban geofencing game</blockquote>
       <div class="feature">
         <div class="graphic">
-          <iframe width="500" height="281" src="//www.youtube.com/embed/1KRBoHt_VSY" frameborder="0" allowfullscreen></iframe>
+          <div class="video-wrap">
+            <iframe src="//www.youtube.com/embed/1KRBoHt_VSY" frameborder="0" allowfullscreen></iframe>
+          </div>
         </div>
         <div class="copy">
           <h3>Map Attack in a Nutshell</h3>
@@ -40,7 +42,7 @@
   </div>
 
   <div class="panel blue">
-    <section>
+    <section class="constrained">
       <header>
         <h2>How to Play</h2>
       </header>
@@ -59,7 +61,7 @@
         <h2>1. Make a Board</h2>
         <a href="/boards/new" class="btn cream">Go Build One</a>
       </header>
-      <div class="board-gallery col-group">
+      <div class="board-gallery col-group responsive">
         <div class="col col1of3">
           <figure>
             <img src="/img/ladds-addition.png" alt="Ladd's Subtraction">
@@ -113,34 +115,37 @@
   </div>
 
   <div class="panel dark">
-    <section>
-      <h2>Credits</h2>
-      <p>MapAttack was built for iPhone and Android by the team at Esri R&amp;D Center in Portland, OR.</p>
+    <section class="col-group responsive">
+      <div class="col col1of3">
+        <h2>Credits</h2>
+        <p>MapAttack was built for iPhone and Android by the team at Esri R&amp;D Center in Portland, OR.</p>
+        <ul class="col-group">
+          <li class="col col1of2"><a href="http://twitter.com/caseorganic">Amber Case</a></li>
+          <li class="col col1of2"><a href="http://twitter.com/aaronpk">Aaron Parecki</a></li>
+          <li class="col col1of2"><a href="http://twitter.com/NikolasWise">Nikolas Wise</a></li>
+          <li class="col col1of2"><a href="http://twitter.com/paulcpederson">Paul Pederson</a></li>
+          <li class="col col1of2"><a href="http://twitter.com/n8ji">Nate Goldman</a></li>
+          <li class="col col1of2"><a href="http://twitter.com/patrickarlt">Patrick Arlt</a></li>
+          <li class="col col1of2"><a href="http://twitter.com/hsoj">Josh Yaganeh</a></li>
+          <li class="col col1of2"><a href="http://twitter.com/FowlerCourt">Court Fowler</a></li>
+          <li class="col col1of2"><a href="http://twitter.com/thatryana">Ryan Arana</a></li>
+          <li class="col col1of2"><a href="http://twitter.com/poeks">Jen Oslislo</a></li>
+          <li class="col col1of2"><a href="http://twitter.com/kenichi_pdx">Kenichi Nakamura</a></li>
+          <li class="col col1of2"><a href="http://twitter.com/davystevenson">Davy Stevenson</a></li>
+          <li class="col col1of2"><a href="http://twitter.com/JerrySievert">Jerry Sievert</a></li>
+        </ul>
+      </div>
+      <div class="col col1of3">
+        <h2>Technology</h2>
+        <p>MapAttack is a real-time location-based geofencing game built on Esri technology.</p>
 
-      <ul>
-        <li><a href="http://twitter.com/caseorganic">Amber Case</a></li>
-        <li><a href="http://twitter.com/aaronpk">Aaron Parecki</a></li>
-        <li><a href="http://twitter.com/NikolasWise">Nik Wise</a></li>
-        <li><a href="http://twitter.com/paulcpederson">Paul Pederson</a></li>
-        <li><a href="http://twitter.com/n8ji">Nate Goldman</a></li>
-        <li><a href="http://twitter.com/patrickarlt">Patrick Arlt</a></li>
-        <li><a href="http://twitter.com/hsoj">Josh Yaganeh</a></li>
-        <li><a href="http://twitter.com/FowlerCourt">Court Fowler</a></li>
-        <li><a href="http://twitter.com/thatryana">Ryan Arana</a></li>
-        <li><a href="http://twitter.com/poeks">Jen Oslislo</a></li>
-        <li><a href="http://twitter.com/kenichi_pdx">Kenichi Nakamura</a></li>
-        <li><a href="http://twitter.com/davystevenson">Davy Stevenson</a></li>
-        <li><a href="http://twitter.com/JerrySievert">Jerry Sievert</a></li>
-      </ul>
+        <p>For more information about Esri technology for developers, see <a href="http://developers.esri.com">developers.arcgis.com</a>.</p>
+      </div>
+      <div class="col col1of3">
+        <h2>History</h2>
 
-      <h2>Technology</h2>
-      <p>MapAttack is a real-time location-based geofencing game built on Esri technology.</p>
-
-      <p>For more information about Esri technology for developers, see <a href="http://developers.esri.com">developers.arcgis.com</a>.</p>
-
-      <h2>History</h2>
-
-      <p>MapAttack is a tribute to the 2004 location-based mapping game <a href="http://www.pacmanhattan.com/">PacManhattan</a>, and is a remake of the original <a href="https://geoloqi.com/blog/2011/04/geoloqi-launches-mapattack-a-real-time-location-based-mobile-gaming-platform-of-awesomeness/">MapAttack 2011</a> built on Geoloqi software.</p>
+        <p>MapAttack is a tribute to the 2004 location-based mapping game <a href="http://www.pacmanhattan.com/">PacManhattan</a>, and is a remake of the original <a href="https://geoloqi.com/blog/2011/04/geoloqi-launches-mapattack-a-real-time-location-based-mobile-gaming-platform-of-awesomeness/">MapAttack 2011</a> built on Geoloqi software.</p>
+      </div>
     </section>
   </div>
 
