fix adding new players and other tweaks

--- a/app/scss/_editor.scss
+++ b/app/scss/_editor.scss
@@ -155,6 +155,7 @@
   text-align: center;
   vertical-align: center;
   background-color: $light-gray;
+  outline: none;
   @include border-radius(10px);
   &.p10:after {
     content: '10';
