--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,17 +41,23 @@
     <section>
   </div>
 
-  <div class="panel blue">
-    <section class="constrained">
-      <header>
-        <h2>How to Play</h2>
-      </header>
+  <div class="panel blue cats">
+    <section>
+      <div class="feature">
+        <div class="graphic">
+        </div>
+        <div class="copy">
+          <header>
+            <h2>How to Play</h2>
+          </header>
 
-      <p>MapAttack is a game of territory capture for groups up to 20 people!</p>
-      <p>You can play MapAttack if there is a gameboard in your area, or you can make your own from the web at <a href="http://mapattack.org" class="white">mapattack.org</a>!</p>
-      <p>To join the game from your phone, tap on Nearby Games to see if there is a game near you. Once you see a nearby game, click on the game to join it, and you'll be assigned a team. Group up with your team and wait until all players have connected to start the game.</p>
-      <p>Once all players have been assigned a team, try to pick up as many points on the map as you can. You'll be able to see the other players on the other team by their icons on the map, and you'll be able to see both team's scores update in real time.</p>
-      <p>When all the points on the map are gone, you'll get a message with your score!</p>
+          <p>MapAttack is a game of territory capture for groups up to 20 people!</p>
+          <p>You can play MapAttack if there is a gameboard in your area, or you can make your own from the web at <a href="http://mapattack.org" class="white">mapattack.org</a>!</p>
+          <p>To join the game from your phone, tap on Nearby Games to see if there is a game near you. Once you see a nearby game, click on the game to join it, and you'll be assigned a team. Group up with your team and wait until all players have connected to start the game.</p>
+          <p>Once all players have been assigned a team, try to pick up as many points on the map as you can. You'll be able to see the other players on the other team by their icons on the map, and you'll be able to see both team's scores update in real time.</p>
+          <p>When all the points on the map are gone, you'll get a message with your score!</p>
+        </div>
+      </div>
     </section>
   </div>
 
