--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,7 +26,7 @@
 </div>
 
 <div class="panel cream">
-  <section class="all-boards">
+  <section>
     <header>
       <h2 class="red">Recent Boards</h2>
       <a href="/boards" class="btn red">View All Boards</a>
