--- a/app/scss/base/_layout.scss
+++ b/app/scss/base/_layout.scss
@@ -117,7 +117,7 @@
   &.cats {
     background: blue url(/img/cats-tiled-transparent.png) repeat center center;
     section {
-      background-color: transparentize($blue, .1);
+      @include text-shadow(1px 1px 0 $blue);
       @include box-sizing(border-box);
       padding: 1em;
     }
