--- a/views/viewer.ejs
+++ b/views/viewer.ejs
@@ -26,7 +26,7 @@
         <% if (state) { %>
           <span class="board-title" ng-bind="game.name"><%= state.game.name %></span>
         <% } %>
-        <span class="total-players" ng-bind="game.teams.blue.size + game.teams.red.size + ' players'"><%- state.game.teams.blue.size + state.game.teams.red.size %> players</span>
+        <span class="total-players" ng-bind="playerListing.length + ' players'"><%- state.game.teams.blue.size + state.game.teams.red.size %> players</span>
       </header>
       <div class="col-group">
         <div class="score blue col col1of2 on-blue">
