handle game start and end events, handle player join event, change bar color when game starts

--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -13,6 +13,7 @@ $red:            #F54130 !default;
 $dark-red:       darken($red, 15) !default;
 $blue:           #5498E8 !default;
 $dark-blue:      #1E6ACA !default;
+$green:          #4BD85A !default;
 
 $body-blue:      darken($blue, 6%);
 $light-blue:     lighten($blue, 10%);
