--- a/app/scss/_viewer.scss
+++ b/app/scss/_viewer.scss
@@ -17,11 +17,17 @@
     font-family: $body-font;
     font-size:1em;
     border: 3px solid $white;
+    border-bottom: none;
     padding: 1em;
     @include box-sizing(border-box);
     .total-players {
       float:right;
       text-align:right;
+    }
+    &.active {
+      font-weight: 700;
+      color: $cream;
+      background-color: $green;
     }
   }
   .score {
