copy updates from amber

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,13 +91,9 @@
           <img src="/img/apps.png">
         </div>
         <div class="copy">
-          <h3>Available Everywhere</h3>
+          <h3>Available Everywhere Soon</h3>
           <p>
-            The Map Attack app is available in both the Apple App Store and on Google Play.
-          </p>
-          <p>
-            <a href="android-store" class="btn red margin">Get the Android Version</a>
-            <a href="mac-store" class="btn blue">Get the iOS Version</a>
+            We'll be releasing both iOS and Android versions shortly! Right now we are beta testing in small groups in Portland, Oregon. If you'd like to participate, tell us at <a href="http://twitter.com/EsriPDX">@EsriPDX</a>!
           </p>
         </div>
       </div>
@@ -106,9 +102,9 @@
 
   <div class="panel blue high-five">
     <section>
-      <h2>3. Have Way Too Much Fun</h2>
+      <h2>3. Hit The Streets!</h2>
       <p class="large">
-        Meet with a group of friends at the real-world location of your board, hit go, and experience the madness!
+        Meet with a group of friends at the real-world location of your board, start the game, and run for glory!
       </p>
     <section>
   </div>
@@ -117,7 +113,7 @@
     <section class="col-group responsive">
       <div class="col col1of3">
         <h2>Credits</h2>
-        <p>MapAttack was built for iPhone and Android by the team at Esri R&amp;D Center in Portland, OR.</p>
+        <p>MapAttack was built for iPhone and Android by the team at the <a href="http://pdx.esri.com">Esri R&amp;D Center</a> in Portland, OR.</p>
         <ul class="col-group">
           <li class="col col1of2"><a href="http://twitter.com/caseorganic">Amber Case</a></li>
           <li class="col col1of2"><a href="http://twitter.com/aaronpk">Aaron Parecki</a></li>
@@ -136,14 +132,14 @@
       </div>
       <div class="col col1of3">
         <h2>Technology</h2>
-        <p>MapAttack is a real-time location-based geofencing game built on Esri technology.</p>
+        <p>MapAttack is a real-time location-based geofencing game built on Esri's Geotrigger Service, a low power Geofencing solution for mobile and web apps. The Geotrigger Service is currently in private beta. If you'd like to try it out, contact us at <a href="http://twitter.com/EsriPDX">@EsriPDX</a>.</p>
 
-        <p>For more information about Esri technology for developers, see <a href="http://developers.esri.com">developers.arcgis.com</a>.</p>
+        <p>For more information about Esri technology for developers, see <a href="http://developers.arcgis.com">developers.arcgis.com</a>. We'll be releasing libraries and source code related to the game at <a href="http://pdx.esri.com">Esri R&amp;D Center Portland Blog</a>.</p>
       </div>
       <div class="col col1of3">
         <h2>History</h2>
 
-        <p>MapAttack is a tribute to the 2004 location-based mapping game <a href="http://www.pacmanhattan.com/">PacManhattan</a>, and is a remake of the original <a href="https://geoloqi.com/blog/2011/04/geoloqi-launches-mapattack-a-real-time-location-based-mobile-gaming-platform-of-awesomeness/">MapAttack 2011</a> built on Geoloqi software.</p>
+        <p>MapAttack is a tribute to the 2004 location-based mapping game <a href="http://www.pacmanhattan.com/">PacManhattan</a>, and is a remake of the original <a href="https://geoloqi.com/blog/2011/04/geoloqi-launches-mapattack-a-real-time-location-based-mobile-gaming-platform-of-awesomeness/">MapAttack 2011</a> built on Geoloqi software (Geoloqi joined Esri in 2012!)</p>
       </div>
     </section>
   </div>
