--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,7 +58,7 @@
     <section>
       <header>
         <h2>1. Make a Board</h2>
-        <a href="/boards/new" class="btn cream">Go Build One</a>
+        <a class="btn cream">Go Build One Soon</a>
       </header>
       <div class="board-gallery col-group responsive">
         <div class="col col1of3">
