Update Android and iOS supported versions

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
         </div>
         <div class="copy">
           <h3>Map Attack in a Nutshell</h3>
-          <p>Two teams compete to capture the most points on the gameboard. The gameboard, in this case, is the city streets of the neighborhood the players are in. To play, all you need is a phone (Android running 2.2 or later and iPhone 3GS or later), a city street, park or college campus, and some friends.</p>
+          <p>Two teams compete to capture the most points on the gameboard. The gameboard, in this case, is the city streets of the neighborhood the players are in. To play, all you need is a phone (Android running 2.3.3 or later and iPhone 4 or later, running iOS 7), a city street, park or college campus, and some friends.</p>
         </div>
       </div>
     <section>
